--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,21 @@
 ---
 
 @import "{{ site.theme }}";
+
+body {
+  color: #E3E3E3 !important;
+  background-color: #060606 !important;
+}
+
+.page-header {
+  background-color: #0080FF !important;
+  background-image: linear-gradient(120deg, #0080FF, #002080);
+}
+
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+  color: #0080FF;
+}
+
+a {
+  color: #FF7E00;
+}
