--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-body {
+/*body {
   color: #E3E3E3 !important;
   background-color: #060606 !important;
 }
@@ -19,4 +19,4 @@ body {
 
 a {
   color: #FF7E00;
-}
+}*/
