--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,8 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+@import "minima/skins/{{ site.minima.skin | default: 'classic' }}";
+@import "minima/initialize";
 
 /*body {
   color: #E3E3E3 !important;
