--- a/_includes/custom-heal.html
+++ b/_includes/custom-heal.html
@@ -5,15 +5,17 @@
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="194x194" href="/favicon-194x194.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0080ff">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="194x194" href="/img/favicons/favicon-194x194.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/img/favicons/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
+<link rel="manifest" href="/img/favicons/site.webmanifest">
+<link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#0080ff">
+<link rel="shortcut icon" href="/img/favicons/favicon.ico">
 <meta name="apple-mobile-web-app-title" content="thakyZ Portfolio">
 <meta name="application-name" content="thakyZ Portfolio">
 <meta name="msapplication-TileColor" content="#0080ff">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="msapplication-TileImage" content="/img/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
