--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "minima/skins/{{ site.minima.skin | default: 'solarized-dark' }}";
+@import "minima/skins/{{ site.minima.skin | default: 'material' }}";
 @import "minima/initialize";
 
 /*body {
