--- a/_sass/minima/skins/material.scss
+++ b/_sass/minima/skins/material.scss
@@ -16,20 +16,20 @@ $mat-is-dark: false !default;
 
 $mat-base03:   #212121;  // 00  00  13
 $mat-base02:   #2E2E2E;  // 00  00  18
-$mat-base01:   #212121;  //180  07 100
+$mat-base01:   #212121;  // 00  00  13
 $mat-base00:   #212121;  // 00  00  13
 $mat-base0:    #212121;  // 00  00  13
-$mat-base1:    #EEFFFF;  //180  07 100
+$mat-base1:    #EEEEEE;  // 00  00  93
 $mat-base2:    #2E2E2E;  // 00  00  18
-$mat-base3:    #EEFFFF;  //180  07 100
-$mat-yellow:   #b58900;  // 60  10  65
-$mat-orange:   #cb4b16;  // 50  50  55
-$mat-red:      #dc322f;  // 50  65  45
-$mat-magenta:  #d33682;  // 50  65 -05
-$mat-violet:   #6c71c4;  // 50  15 -45
-$mat-blue:     #B2CCD6;  //197  17  84
-$mat-cyan:     #2aa198;  // 60 -35 -05
-$mat-green:    #859900;  // 60 -20  65
+$mat-base3:    #EEEEEE;  // 00  00  93
+$mat-yellow:   #F9EE98;  // 53  39  98
+$mat-orange:   #FFCB6B;  // 39  58 100
+$mat-red:      #F78C6C;  // 14  56  97
+$mat-magenta:  #C792EA;  //276  38  92
+$mat-violet:   #CDA869;  // 38  49  80
+$mat-blue:     #FFCB6B;  //197  17  84
+$mat-cyan:     #B2CCD6;  //197  17  84
+$mat-green:    #C3E88D;  // 84  39  91
 
 $mat-mono3:    $mat-base3;
 $mat-mono2:    $mat-base2;
