--- a/_sass/minima/skins/material.scss
+++ b/_sass/minima/skins/material.scss
@@ -27,7 +27,7 @@ $mat-orange:   #FFCB6B;  // 39  58 100
 $mat-red:      #F78C6C;  // 14  56  97
 $mat-magenta:  #C792EA;  //276  38  92
 $mat-violet:   #CDA869;  // 38  49  80
-$mat-blue:     #FFCB6B;  //197  17  84
+$mat-blue:     #89DDFF;  //197  46 100
 $mat-cyan:     #B2CCD6;  //197  17  84
 $mat-green:    #C3E88D;  // 84  39  91
 
