--- a/_sass/minima/skins/material.scss
+++ b/_sass/minima/skins/material.scss
@@ -17,7 +17,7 @@ $mat-is-dark: false !default;
 $mat-base03:   #212121;  // 00  00  13
 $mat-base02:   #2E2E2E;  // 00  00  18
 $mat-base01:   #212121;  // 00  00  13
-$mat-base00:   #212121;  // 00  00  13
+$mat-base00:   #EEEEEE;  // 00  00  13
 $mat-base0:    #212121;  // 00  00  13
 $mat-base1:    #EEEEEE;  // 00  00  93
 $mat-base2:    #2E2E2E;  // 00  00  18
