--- a/_sass/minima/skins/material.scss
+++ b/_sass/minima/skins/material.scss
@@ -16,7 +16,7 @@ $mat-is-dark: false !default;
 
 $mat-base03:   #212121;  // 00  00  13
 $mat-base02:   #2E2E2E;  // 00  00  18
-$mat-base01:   #EEEEEE;  // 00  00  13
+$mat-base01:   #212121;  // 00  00  13
 $mat-base00:   #212121;  // 00  00  13
 $mat-base0:    #212121;  // 00  00  13
 $mat-base1:    #EEEEEE;  // 00  00  93
@@ -31,6 +31,7 @@ $mat-blue:     #89DDFF;  //197  46 100
 $mat-cyan:     #B2CCD6;  //197  17  84
 $mat-green:    #C3E88D;  // 84  39  91
 
+$mat-mono4:    $mat-base01;
 $mat-mono3:    $mat-base3;
 $mat-mono2:    $mat-base2;
 $mat-mono1:    $mat-base1;
@@ -38,6 +39,7 @@ $mat-mono00:   $mat-base00;
 $mat-mono01:   $mat-base01;
 
 @if $mat-is-dark {
+  $mat-mono4:  $mat-base1;
   $mat-mono3:  $mat-base03;
   $mat-mono2:  $mat-base02;
   $mat-mono1:  $mat-base01;
